--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,6 @@
 before_script:
     - python --version
+    - easy_install pip
     - pip install setuptools
     - python setup.py develop
     - sff --help
