--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 before_script:
     - python --version
-    - apt-get install -y python-dev python-pip
+    - yum install -y python-dev python-pip
     - pip install setuptools
     - python setup.py develop
     - sff --help
