--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ before_script:
     - python get-pip.py
     - pip -V
     - pip install setuptools
+    - pip install -r requirements.txt
     - python setup.py develop
     - sff --help
 
