--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ sudo: true
 
 before_install:
   - python --version
-  - apt-get update
-  - apt-get install build-essential
-  - apt-get install -y python-dev python-pip
+  - sudo apt-get update
+  - sudo apt-get install build-essential
+  - sudo apt-get install -y python-dev python-pip
   - pip -V
   - pip install setuptools
 
