added the rest of the tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,8 @@ install:
 
 script:
   - sff tests schema -v 3
+  - sff tests readers -v 3
+  - sff tests formats -v 3
+  - sff tests notes -v 3
+  - sff tests core -v 3
+  - sff tests main -v 3
