--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,12 @@
 before_script:
     - python --version
-    - yum -y update
-    - yum -y install gcc gcc-c++
-    - yum install -y python-devel
-    - curl "https://bootstrap.pypa.io/get-pip.py" -o "get-pip.py"
-    - python get-pip.py
+#    - yum -y update
+#    - yum -y install gcc gcc-c++
+#    - yum install -y python-devel
+#    - curl "https://bootstrap.pypa.io/get-pip.py" -o "get-pip.py"
+#    - python get-pip.py
     - pip -V
+    - pip install --upgrade pip
     - pip install setuptools
     - pip install -r requirements.txt
     - python setup.py develop
