--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ before_install:
   - sudo apt-get install build-essential
   - sudo apt-get install -y python-dev python-pip
   - pip -V
+  - pip install --upgrade pip
   - pip install setuptools
   - pip install coveralls
   - pip install h5py
