--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_install:
   - python --version
   - sudo apt-get update
   - sudo apt-get install build-essential
-  - sudo apt-get install -y python-dev python-pip
+#  - sudo apt-get install -y python-dev python-pip
   - pip -V
   - pip install --upgrade pip
   - pip install setuptools
