debugged configs and wrote new tests

--- a/sfftk/sff.conf
+++ b/sfftk/sff.conf
@@ -6,6 +6,6 @@
 # Notes
 # -------------------------------------------------
 __TEMP_FILE=./temp-annotated.json
-# the reference to the above temp file (default is dash ('-')
+# the reference to the above temp file (default is dash ('@')
 __TEMP_FILE_REF=@
 
