--- a/.gitignore
+++ b/.gitignore
@@ -122,3 +122,7 @@ build
 /.coverage
 
 
+sfftk/test_data/sff/v0.7/emd_1014.hff
+sfftk/test_data/sff/v0.7/output_emd_1181.json
+sfftk/test_data/sff/v0.7/output_emd_1181.sff
+sfftk/test_data/test_data.hff
