--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: python
 
 python:
   - "2.7"
+  - "3.6"
+  - "3.7"
 
 sudo: true
 
@@ -14,13 +16,17 @@ before_install:
   - pip install --upgrade pip
   - pip install setuptools
   - pip install coveralls
+  - pip install numpy
+  - pip install pytest
+  - pip install pytest-cov
 
 install:
   - python setup.py develop
   - sff --help
 
 script:
-  - coverage run --include="/home/travis/build/emdb-empiar/sfftk/sfftk/*" --omit="/home/travis/build/emdb-empiar/sfftk/sfftk/schema/v*.py","/home/travis/build/emdb-empiar/sfftk/sfftk/test_data","/home/travis/build/emdb-empiar/sfftk/sfftk/unittests" `which sff` tests all -v 3
+  - pytest --cov=./sfftk sfftk/unittests
+#  - coverage run --include="/home/travis/build/emdb-empiar/sfftk/sfftk/*" --omit="/home/travis/build/emdb-empiar/sfftk/sfftk/schema/v*.py","/home/travis/build/emdb-empiar/sfftk/sfftk/test_data","/home/travis/build/emdb-empiar/sfftk/sfftk/unittests" `which sff` tests all -v 3
 
 after_success:
   - coveralls
