Dev release: v0.4.0.dev2
* added badge for python versions
* SFFLattice: if data is a string encode it to ASCII byte string
* coverage: omit several files

--- a/.coveragerc
+++ b/.coveragerc
@@ -5,3 +5,7 @@ omit =
     sfftk/schema/v_0_6_0_a_3.py
     sfftk/schema/v_0_6_0_a_4.py
     sfftk/schema/v_0_7_0_dev_0.py
+    sfftk/test_data/*
+    sfftk/unittests/*
+    sfftk/sff.py
+    sfftk/core/__init__.py
