--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,9 @@ sudo: true
 
 before_install:
   - python --version
-  - apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 6B05F25D762E3157
-  - apt-get update
-  - apt-get install build-essential
+  - sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 6B05F25D762E3157
+  - sudo apt-get update
+  - sudo apt-get install build-essential
   - pip -V
   - pip install --upgrade pip
   - pip install setuptools
