Refactoring and bugfixes
* dropped support for Python2.7; requires Python3.6+
* fixed https://github.com/emdb-empiar/sfftk/issues/22
* now convert takes keywords; updated documentation to show keywords required
* update uniprot search path
* new tests for ilastik (read and convert)
* updated CHANGELOG.md to have fixes from all releases
* version bump: v0.6.0.dev0

--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,14 @@
 [tox]
-envlist = py27, py35, py36, py37, py38
+envlist = python3.6, python3.7, python3.8, python3.9, python3.10
 
-[testenv]
+[testenv:python3.{6,7,8,9,10}]
 deps =
+	git+https://github.com/mcfletch/simpleparse
 	numpy
 	pytest
 	pytest-cov
 commands =
 	pip install --upgrade --no-cache-dir pip
 	pytest --cov=./sfftk sfftk/unittests
+
 
