--- a/tox.ini
+++ b/tox.ini
@@ -7,8 +7,13 @@ deps =
 	numpy
 	pytest
 	pytest-cov
+	flake8
 commands =
 	pip install --upgrade --no-cache-dir pip
+	# stop the build if there are Python syntax errors or undefined names
+	flake8 ./sfftk --count --select=E9,F63,F7,F82 --show-source --statistics
+	# exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+	flake8 ./sfftk --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 	pytest --cov=./sfftk sfftk/unittests
 
 
