--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -10,7 +10,7 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
+  test:
 
     runs-on: ubuntu-latest
     strategy:
@@ -26,8 +26,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 pytest pytest-cov
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        python -m pip install flake8 pytest pytest-cov numpy git+https://github.com/mcfletch/simpleparse
+        python -m pip install coverage coveralls
+        python -m pip install -e .
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
@@ -37,3 +38,7 @@ jobs:
     - name: Test with pytest
       run: |
         pytest --cov=./sfftk sfftk/unittests
+    - name: Upload Coverage to Codecov
+      uses: codecov/codecov-action@v3
+      with:
+          verbose: true
