--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -26,15 +26,15 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 pytest pytest-cov numpy git+https://github.com/mcfletch/simpleparse
+        python -m pip install flake8 pytest pytest-cov numpy 
         python -m pip install coverage coveralls
         python -m pip install -e .
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
-        flake8 ./sfftk --count --select=E9,F63,F7,F82 --show-source --statistics --builtins="basestring,unicode"
+        flake8 ./sfftk --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 ./sfftk --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics --builtins="basestring,unicode"
+        flake8 ./sfftk --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
         pytest --cov=./sfftk sfftk/unittests
