--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,4 @@ sfftk/test_data/sff/v0.7/emd_1014.hff
 sfftk/test_data/sff/v0.7/output_emd_1181.json
 sfftk/test_data/sff/v0.7/output_emd_1181.sff
 sfftk/test_data/test_data.hff
+/ignored_scripts/
