--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,6 @@ sfftk/test_data/sff/v0.7/output_emd_1181.json
 sfftk/test_data/sff/v0.7/output_emd_1181.sff
 sfftk/test_data/test_data.hff
 /ignored_scripts/
+/build_for_pypi.sh
+/codecov
+/test_notes.sh
