--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
-envlist = python3.6, python3.7, python3.8, python3.9, python3.10, python3.11
+envlist = python3.7, python3.8, python3.9, python3.10, python3.11
 
-[testenv:python3.{6,7,8,9,10,11}]
+[testenv:python3.{7,8,9,10,11}]
 deps =
 	numpy
 	pytest
