--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 pytest pytest-cov numpy 
+        python -m pip install flake8 pytest pytest-cov numpy ahds
         python -m pip install coverage coveralls
         python -m pip install -e .
     - name: Lint with flake8
