--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -27,7 +27,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest pytest-cov
-        python -m pip install -r requirements
+        python -m pip install -r requirements.txt
         python -m pip install coverage coveralls
         python -m pip install -e .
     - name: Lint with flake8
