--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,6 @@ commands =
 	flake8 ./sfftk --count --select=E9,F63,F7,F82 --show-source --statistics
 	# exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
 	flake8 ./sfftk --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-	pytest --cov=./sfftk sfftk/unittests
+	pytest -ra -vv --cov=./sfftk sfftk/unittests
 
 
