--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -26,8 +26,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 pytest pytest-cov numpy
+        python -m pip install flake8 pytest pytest-cov
         python -m pip install coverage coveralls
+    - name: Install numpy
+      run: |
+        python -m pip install numpy
         python -m pip install ahds
     - name: Install sfftk package
       run: |
