--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -31,6 +31,9 @@ jobs:
     - name: Install numpy
       run: |
         python -m pip install numpy
+        python -c "import numpy; print(numpy.__version__)"
+    - name: Install ahds
+      run: |
         python -m pip install ahds
     - name: Install sfftk package
       run: |
