--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -28,6 +28,7 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest pytest-cov
         python -m pip install coverage coveralls
+        python -m pip install wheel
     - name: Install numpy
       run: |
         python -m pip install numpy
